// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeView component renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#181C32",
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 13,
      },
      Object {
        "color": "#767D93",
      },
      undefined,
    ]
  }
  testID="time_view"
>
  Oct 20, 2020
</Text>
`;

exports[`TimeView component renders correctly with props style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#181C32",
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 13,
      },
      Object {
        "color": "#767D93",
      },
      Object {
        "color": "#FF9800",
      },
    ]
  }
  testID="time_view"
>
  Today at 12:00 AM
</Text>
`;

exports[`TimeView component renders correctly with props textProps 1`] = `
<Text
  numberOfLines={2}
  style={
    Array [
      Object {
        "color": "#181C32",
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 13,
      },
      Object {
        "color": "#767D93",
      },
      undefined,
    ]
  }
  testID="time_view"
>
  Today at 12:00 AM
</Text>
`;

exports[`TimeView component renders correctly with time empty 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#181C32",
        "fontFamily": "BeVietnamPro-Light",
        "fontSize": 13,
      },
      Object {
        "color": "#767D93",
      },
      undefined,
    ]
  }
  testID="time_view"
>
  
</Text>
`;
